--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,15 +5,14 @@
     (change)="toggleTheme()"
   >
   </mat-slide-toggle>
+</div>
 
-  <!-- Language Dropdown -->
-  <div class="language-switcher">
-    <label for="language-select">Language:</label>
-    <select id="language-select" (change)="onLanguageChange($event)">
-      <option value="en" [selected]="currentLanguage === 'en'">English</option>
-      <option value="es" [selected]="currentLanguage === 'es'">Español</option>
-    </select>
-  </div>
+<div class="language-switcher">
+  <label for="language-select">Language:</label>
+  <select id="language-select" [(ngModel)]="currentLanguage" (change)="onLanguageChange($event)">
+    <option value="en">English</option>
+    <option value="es">Español</option>
+  </select>
 </div>
 
 <router-outlet></router-outlet>
