--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,17 +38,23 @@ mat-slide-toggle {
 
 /* Language switcher styles */
 .language-switcher {
-  margin-left: 20px;
-  select {
-    padding: 0.5rem;
-    font-size: 1rem;
-    background-color: var(--container-background-color);
-    color: var(--text-color);
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-  }
+  position: fixed; /* Fixes the position relative to the viewport */
+  top: 20px; /* Adjust this value as needed to position it correctly */
+  right: 20px; /* Adjust this value as needed to position it correctly */
+  z-index: 1000; /* Ensure it's on top of other elements */
+  background-color: var(--container-background-color); /* Adjust as needed */
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a slight shadow to make it stand out */
+}
+
+select {
+  padding: 5px;
+  font-size: 1rem;
+  background-color: var(--container-background-color);
+  border: none;
+  border-radius: 5px;
+  color: var(--text-color);
 }
 
 /* Body and background colors */
