--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -41,7 +41,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--background-color);
+    background-color: var(--main-background-color);
     color: var(--text-color);
     overflow: visible; /* Ensures content can scroll if it overflows */
   }
@@ -54,16 +54,24 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     background-color: var(--container-background-color);
-    color: var(--text-color);
+    color: var(--body-color);
   }
+
+  ::ng-deep .mat-mdc-form-field .mat-mdc-floating-label.mdc-floating-label {
+    font-size: 11pt; // Added font-size
+}
 
   ::ng-deep .mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-floating-label {
     color: inherit !important;
 }
 
-::ng-deep .mat-mdc-radio-button .mat-internal-form-field {
+  ::ng-deep .mat-mdc-radio-button .mat-internal-form-field {
   color: inherit !important;
 }
+
+  ::ng-deep .mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-text-field__input{
+    color: #ffffff !important;
+  }
   
   .title {
     text-align: center;
@@ -71,13 +79,13 @@
   
     h3 {
       font-size: 24px;
-      color: var(--text-color);
+      color: var(--blackColor);
       margin-bottom: 8px;
     }
   
     p {
       font-size: 14px;
-      color: var(--text-color);
+      color: var(--blackColor);
   
       .signin-link {
         color: #1a73e8;
@@ -94,7 +102,7 @@
     display: block;
     font-size: 14px;
     margin-bottom: 5px;
-    color: var(--text-color);
+    color: var(--blackColor);
   }
   
   mat-form-field {
@@ -156,13 +164,14 @@
     font-weight: normal;
     background-color: var(--button-background-color);
     color: var(--button-text-color);
+    border-radius: 4px;
   
     &:hover {
       background-color: var(--button-background-hover-color);
     }
   
     &:disabled {
-      background-color: #6d6e6e;
+      background-color: var(--button-disabled-color);
       color: #ffffff;
     }
   }
